@@ -13,14 +13,14 @@ plugins {
     id 'checkstyle'
     id 'jacoco'
     id 'pmd'
-    id 'com.github.ben-manes.versions' version '0.49.0'
+    id 'com.github.ben-manes.versions' version '0.50.0'
     id "info.solidsoft.pitest" version '1.15.0'
-    id 'io.spring.dependency-management' version '1.1.3'
-    id 'org.owasp.dependencycheck' version '8.4.0'
+    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.owasp.dependencycheck' version '9.0.8'
     id 'org.sonarqube' version '3.5.0.2730'
-    id 'org.springframework.boot' version '2.7.16'
-    id 'uk.gov.hmcts.java' version '0.12.45'
-    id 'au.com.dius.pact' version '4.6.3'
+    id 'org.springframework.boot' version '2.7.18'
+    id 'uk.gov.hmcts.java' version '0.12.55'
+    id 'au.com.dius.pact' version '4.6.4'
     id "io.freefair.lombok" version "6.6.3"
 }
 
@@ -30,10 +30,10 @@ apply plugin: 'project-report'
 apply plugin: 'idea'
 
 def versions = [
-    junit              : '5.10.0',
-    junitPlatform      : '1.10.0',
+    junit              : '5.10.1',
+    junitPlatform      : '1.10.1',
     gradlePitest       : '1.5.1',
-    pitest             : '1.15.0',
+    pitest             : '1.15.3',
     reformLogging      : '5.1.7',
     reformHealthStarter: '0.0.5',
     restAssured        : '5.3.2',
@@ -42,7 +42,7 @@ def versions = [
     springHystrix      : '2.2.10.RELEASE',
     pact_version       : '4.1.38',
     springDoc          : '1.7.0',
-    springCloud        : '3.1.8'
+    springCloud        : '3.1.9'
 ]
 
 mainClassName = 'uk.gov.hmcts.reform.iacasedocumentsapi.Application'
@@ -151,7 +151,7 @@ configurations {
 
 checkstyle {
     maxWarnings = 0
-    toolVersion = '10.12.4'
+    toolVersion = '10.12.5'
     configDirectory.set(new File(rootDir, 'config/checkstyle'))
 }
 
@@ -196,16 +196,20 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
     useJUnitPlatform()
     testClassesDirs = sourceSets.contractTest.output.classesDirs
     classpath = sourceSets.contractTest.runtimeClasspath
-
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
 
 project.ext {
     pactVersion = getCheckedOutGitCommitHash()
 }
 
 jacoco {
-    toolVersion = "0.8.10"
+    toolVersion = "0.8.11"
 }
 
 jacocoTestReport {
@@ -228,7 +232,7 @@ pitest {
     ]
     threads = 10
     outputFormats = ['XML', 'HTML']
-    timestampedReports = true
+    timestampedReports = false
     failWhenNoMutations = false
     verbose = true
     mutationThreshold = 90
@@ -273,18 +277,18 @@ dependencyManagement {
         }
 
 
-        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.15.2') {
+        dependencySet(group: 'com.fasterxml.jackson.core', version: '2.16.1') {
             entry 'jackson-databind'
             entry 'jackson-core'
             entry 'jackson-annotations'
         }
 
-        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.15.2') {
+        dependencySet(group: 'com.fasterxml.jackson.dataformat', version: '2.16.1') {
             entry 'jackson-dataformat-yaml'
             entry 'jackson-dataformat-csv'
         }
 
-        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.15.2') {
+        dependencySet(group: 'com.fasterxml.jackson.datatype', version: '2.16.1') {
             entry 'jackson-datatype-jsr310'
             entry 'jackson-datatype-jdk8'
         }
@@ -310,7 +314,7 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: versions.springCloud
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.7'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.8'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation'
 
 
@@ -321,7 +325,7 @@ dependencies {
 
 
     // CVE-2019-17195
-    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.36'
+    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.37.3'
 
     // CVE-2021-27568
     implementation group: 'net.minidev', name: 'json-smart', version: '2.5.0'
@@ -335,7 +339,10 @@ dependencies {
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springDoc
 
-    implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.8'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.13'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.13'
+
+    implementation group: 'com.sun.xml.bind', name: 'jaxb-osgi', version: '2.3.9'
 
     implementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
     implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
@@ -343,19 +350,18 @@ dependencies {
     implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.4'
     implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
 
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.13.0'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.14.0'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
 
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
 
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.85'
+    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.85'
 
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.81'
-    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.81'
-
-    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.2.1'
+    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '6.3.0'
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
-    implementation group: 'com.google.guava', name: 'guava', version: '32.1.2-jre'
+    implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
 
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
     compileOnly 'org.projectlombok:lombok:1.18.30'
@@ -365,7 +371,7 @@ dependencies {
     testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: versions.springSecurity
 
     testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
-    testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.pitest}"
+    testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.15.0"
     testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:${versions.sonarPitest}"
 
     testImplementation group: 'io.rest-assured', name: 'rest-assured-all', version: versions.restAssured
@@ -376,18 +382,23 @@ dependencies {
     testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
     testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
 
+    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0', classifier: 'all', {
+        exclude group: 'commons-io', module: 'commons-io'
+        exclude group: 'org.apache.commons', module: 'commons-lang3'
+    }
+
     testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
 
-    testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.8') {
+    testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.9') {
         exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
     }
 
     //pact contract testing
-    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: "4.6.3"
+    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: "4.6.4"
 
-    contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.10.0")
-    contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.0")
-    contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.10.0')
+    contractTestImplementation("org.junit.jupiter:junit-jupiter-api:5.10.1")
+    contractTestRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.1")
+    contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.10.1')
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
